--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "aos": "^2.3.4",
     "firebase": "^9.22.0",
     "react": "^18.2.0",
+    "react-cam": "^1.1.11",
     "react-dom": "^18.2.0",
-    "react-google-button": "^0.7.2",
+    "react-html5-camera-photo": "^1.5.11",
     "react-icons": "^4.8.0",
+    "react-media-recorder": "^1.6.6",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-video-recorder": "^3.19.4",
+    "react-webcam": "^7.0.1",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4"
   },
