--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "buffer": "^6.0.3",
     "firebase": "^9.22.0",
     "react": "^18.2.0",
     "react-cam": "^1.1.11",
@@ -19,6 +20,7 @@
     "react-video-recorder": "^3.19.4",
     "react-webcam": "^7.0.1",
     "sass": "^1.62.1",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
