--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-cam": "^1.1.11",
     "react-dom": "^18.2.0",
     "react-flip-move": "^3.0.5",
+    "react-haiku": "^2.0.3",
     "react-html5-camera-photo": "^1.5.11",
     "react-icons": "^4.8.0",
     "react-media-recorder": "^1.6.6",
